--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "*.tcc": "cpp",
         "deque": "cpp",
         "vector": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "thread": "cpp",
+        "*.ipp": "cpp"
     }
 }
